# scoreboard

./: .gitignore  Dockerfile  README.md  pyproject.toml
scoreboard/: match.py  match_sorter.py  scoreboard.py
scripts/: adjusted_formatting.py  requirements_example.py
tests/: conftest.py  test_match.py  test_scoreboard.py
